<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="DM_Connect" Id="{8f85973e-7b41-4891-9036-07607f02fbe1}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK DM_Connect
VAR_INPUT
	Enable			: BOOL;
	Trigger			: BOOL;
	InputBarcode	: stDM_Input;
END_VAR


VAR_OUTPUT
	Enable_Out			: BOOL;
	Done				: BOOL;
	TriggerBarcode		: BOOL;
	AckResultBarcode	: BOOL;
	GoodRead			: BOOL;
	BadRead				: BOOL;
	Data				: STRING;
	Error				: BOOL;
END_VAR


VAR
	SeqIndex	: INT;
	DataTimer	: TON;
	BufferData	: ARRAY [0..MAX_STRING_LENGTH] OF BYTE;
	i			: DINT;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF Enable THEN // Jika Enable aktif
	Enable_Out	:= TRUE; // Aktifkan Enable_Out
	CASE SeqIndex OF // Mulai pemilihan kasus berdasarkan nilai SeqIndex
		0: // Kasus ketika SeqIndex = 0
			IF Trigger THEN // Jika Trigger aktif
				GoodRead:=FALSE; // Set GoodRead menjadi tidak aktif
				BadRead	:=FALSE; // Set BadRead menjadi tidak aktif
				Done	:=FALSE; // Set Done menjadi tidak aktif
				SeqIndex:=1; // Ganti nilai SeqIndex menjadi 1
			END_IF; // Selesai kondisi IF
		1: // Kasus ketika SeqIndex = 1
			IF InputBarcode.ResultsAvailable THEN // Jika hasil tersedia
				AckResultBarcode:=TRUE; // Aktifkan AckResultBarcode
				SeqIndex:=2; // Ganti nilai SeqIndex menjadi 2
			ELSE // Jika hasil tidak tersedia
				SeqIndex:=10; // Ganti nilai SeqIndex menjadi 10
			END_IF; // Selesai kondisi IF
		2: // Kasus ketika SeqIndex = 2
			IF NOT InputBarcode.ResultsAvailable THEN // Jika hasil tidak tersedia
				AckResultBarcode:=FALSE; // Nonaktifkan AckResultBarcode
				SeqIndex:=10; // Ganti nilai SeqIndex menjadi 10
			END_IF; // Selesai kondisi IF
		10: // Kasus ketika SeqIndex = 10
			TriggerBarcode:=TRUE; // Aktifkan TriggerBarcode
			IF InputBarcode.TriggerAck THEN // Jika TriggerAck aktif
				DataTimer(IN:=FALSE); // Nonaktifkan DataTimer
				TriggerBarcode:=FALSE; // Nonaktifkan TriggerBarcode
				SeqIndex:=20; // Ganti nilai SeqIndex menjadi 20
			ELSE // Jika TriggerAck tidak aktif
				DataTimer(IN:=TRUE,PT:=T#20S); // Aktifkan DataTimer dengan periode 20 detik
				IF DataTimer.Q THEN // Jika DataTimer mencapai waktu yang ditentukan
					DataTimer(IN:=FALSE); // Nonaktifkan DataTimer
					SeqIndex:=1000; // Ganti nilai SeqIndex menjadi 1000
				END_IF; // Selesai kondisi IF
			END_IF; // Selesai kondisi IF
		20: // Kasus ketika SeqIndex = 20
			IF InputBarcode.ResultsAvailable THEN // Jika hasil tersedia
				DataTimer(IN:=FALSE); // Nonaktifkan DataTimer
				SeqIndex:=30; // Ganti nilai SeqIndex menjadi 30
			ELSE // Jika hasil tidak tersedia
				DataTimer(IN:=TRUE,PT:=T#20S); // Aktifkan DataTimer dengan periode 20 detik
				IF DataTimer.Q THEN // Jika DataTimer mencapai waktu yang ditentukan
					DataTimer(IN:=FALSE); // Nonaktifkan DataTimer
					SeqIndex:=1000; // Ganti nilai SeqIndex menjadi 1000
				END_IF; // Selesai kondisi IF
			END_IF; // Selesai kondisi IF
		30: // Kasus ketika SeqIndex = 30
			IF InputBarcode.ResultCode = 1 THEN // Jika ResultCode adalah 1
				SeqIndex:=100; // Ganti nilai SeqIndex menjadi 100
			ELSE // Jika ResultCode bukan 1
				SeqIndex:=110; // Ganti nilai SeqIndex menjadi 110
			END_IF; // Selesai kondisi IF
		100: // Kasus ketika SeqIndex = 100
			GoodRead:=TRUE; // Aktifkan GoodRead
			BadRead	:=FALSE; // Nonaktifkan BadRead
			FOR i:=0 TO InputBarcode.ResultDataLength BY 1 DO // Loop untuk setiap byte dalam ResultData
				BufferData[i]:=InputBarcode.ResultData[i]; // Salin data dari InputBarcode.ResultData ke BufferData
			END_FOR // Selesai loop FOR
			Data:=BYTEARR_TO_MAXSTRING(BufferData); // Konversi BufferData menjadi string
			SeqIndex:=200; // Ganti nilai SeqIndex menjadi 200
		110: // Kasus ketika SeqIndex = 110
			GoodRead	:=FALSE; // Nonaktifkan GoodRead
			BadRead		:=TRUE; // Aktifkan BadRead
			Data		:='Not Read'; // Set Data menjadi 'Not Read'
			DataTimer(IN:=FALSE); // Nonaktifkan DataTimer
			SeqIndex:=200; // Ganti nilai SeqIndex menjadi 200
		200: // Kasus ketika SeqIndex = 200
			Done:=TRUE; // Aktifkan Done
			IF NOT Trigger THEN // Jika Trigger tidak aktif
				DataTimer(IN:=TRUE,PT:=T#10MS); // Aktifkan DataTimer dengan periode 10 milidetik
				IF DataTimer.Q THEN // Jika DataTimer mencapai waktu yang ditentukan
					DataTimer(IN:=FALSE); // Nonaktifkan DataTimer
					Done:=FALSE; // Nonaktifkan Done
					SeqIndex:=210; // Ganti nilai SeqIndex menjadi 210
				END_IF // Selesai kondisi IF
			END_IF; // Selesai kondisi IF
		210: // Kasus ketika SeqIndex = 210
			AckResultBarcode:=TRUE; // Aktifkan AckResultBarcode
			IF NOT InputBarcode.ResultsAvailable THEN // Jika hasil tidak tersedia
				AckResultBarcode:=FALSE; // Nonaktifkan AckResultBarcode
				SeqIndex:=0; // Ganti nilai SeqIndex menjadi 0
			END_IF; // Selesai kondisi IF
		1000: // Kasus ketika SeqIndex = 1000
			Error:=TRUE; // Aktifkan Error
			IF NOT Trigger THEN // Jika Trigger tidak aktif
				Error:=FALSE; // Nonaktifkan Error
				TriggerBarcode:=FALSE; // Nonaktifkan TriggerBarcode
				SeqIndex:=0; // Ganti nilai SeqIndex menjadi 0
			END_IF; // Selesai kondisi IF
	END_CASE; // Selesai blok pemilihan kasus
ELSE // Jika Enable tidak aktif
	DataTimer(IN:=FALSE); // Nonaktifkan DataTimer
	Enable_Out		:= FALSE; // Nonaktifkan Enable_Out
	AckResultBarcode:=FALSE; // Nonaktifkan AckResultBarcode
	Error			:=FALSE; // Nonaktifkan Error
	TriggerBarcode	:=FALSE; // Nonaktifkan TriggerBarcode
	GoodRead		:=FALSE; // Nonaktifkan GoodRead
	BadRead			:=FALSE; // Nonaktifkan BadRead


	Done			:=FALSE; // Nonaktifkan Done
	SeqIndex		:=0; // Set SeqIndex menjadi 0
END_IF; // Selesai kondisi IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>